# ArxisVR

./: .env.example  .eslintrc.json  .gitignore  ACHITECTURE.md  AI_CHECKLIST.md  AI_INTEGRATION_SUMMARY.md  AI_README.md  AI_VISUAL_GUIDE.md  AUDITORIA_COMPLETA.md  ArxisVR.csproj  ArxisVR.slnx  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  DESIGN_GUIDE.md  EDUARDO SAMPA.bscollab  EDUARDO SAMPA.bsplcmnt  EPICOS_IMPLEMENTACAO.md  FINAL_DELIVERY.md  FUNDAÇÃO.DWG  GUIA_RAPIDO.md  HOW_TO_RUN.md  INTEGRATION_GUIDE.md  LAUNCH.bat  LAUNCH_ANNOUNCEMENTS.md  LAUNCH_GUIDE.md  LICENSE  MELHORIAS.md  MELHORIAS_FINAL.md  MELHORIAS_V2.md  MELHORIAS_V3.md  PROJECT_SUMMARY.md  Program.cs  QUADRO PILARES.DWG  QUICK_LAUNCH.md  QUICK_START_IFC.md  README.md  README_FINAL.md  READY_TO_LAUNCH.md  (+40 more)
AI/: AIConfig.cs  IfcAIAssistant.cs  OllamaService.cs
Application/: IfcViewer.cs  IfcViewer.cs.backup  SimpleIfcViewer.cs
ArxisVR-Blazor/: ArxisVR.slnx
Examples/: AIExamples.cs
Interaction/: SelectionManager.cs
Mobile/: DEPLOY_GUIDE.md  IFC_TO_MOBILE_PIPELINE.md  IMPLEMENTATION_STATUS.md  MOBILE_ARCHITECTURE.md  README.md
Mobile/avx-mobile/: Cargo.toml  README.md
Models/: IfcElement.cs  IfcGeometry.cs  IfcModel.cs
Properties/: launchSettings.json
Rendering/: AnnotationRenderer.cs  Camera.cs  GpuBufferManager.cs  GridRenderer.cs  InteractionFeedback.cs  MeasurementRenderer.cs  Mesh.cs  PBRRenderer.cs  Renderer3D.cs  SelectionHighlight.cs
Services/: BsCollabParser.cs  DwgParser.cs  IfcModelCache.cs  IfcParser.cs
Testing/: FileLoadTester.cs
Tests/: ArxisVR.Tests.csproj  CERTIFICACAO_COMPLETA_20251222_155802.md  CERTIFICACAO_E2E.md  CompleteTestReport_20251222_155802.md  CompleteTestRunner.cs  CompleteTests.csproj  EVIDENCIAS.md  GUIA_DE_CORRECOES.md  INDEX.md  README.md  RELATORIO_FINAL_COMPLETO.md  RESUMO_EXECUTIVO.md  StandaloneTestRunner.cs  StandaloneTests.csproj  TestReport_20251222_154436.md  TestRunner.cs
Tools/: AnnotationSystem.cs  LayerManager.cs  MeasurementTool.cs  ScreenshotCapture.cs  UndoRedoManager.cs
UI/: AIChatPanel.cs  ElementListPanel.cs  FileDialog.cs  ImGuiController.cs  MinimapCompass.cs  ModelManagerPanel.cs  ModernTheme.cs  ModernToolbar.cs  NotificationSystem.cs  SimpleFileDialog.cs  SimpleUIManager.cs  (+4 more)
arxis-core/: Cargo.toml  fix.patch  lib.rs
arxis-core/geometry/: mod.rs
arxis-core/physics/: cosmology.rs  einstein.rs  geodesic.rs  gravitational_lensing.rs  gravitational_waves.rs  lisa.rs  lisa_analysis.rs  lisa_binary.rs  lisa_catalog.rs  lisa_data.rs  lisa_inference.rs  lisa_processing.rs  lisa_telemetry.rs  lisa_visualization.rs  mod.rs  relativity.rs
arxis-core/tensor/: mod.rs
(+497 files in other folders)
