[package]
name = "avx-arxis"
version = "0.1.0"
edition = "2021"
authors = ["Nícolas Ávila <nicolas@avila.inc>"]
license = "MIT OR Apache-2.0"
description = "Advanced mathematics library"

[lib]
name = "avx_arxis"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib para WASM

[dependencies]
avx-std = { path = "../avx-std", features = ["std"] }
avx-math = { version = "0.1.0", path = "../categories/math/avx-math" }
rayon = "1.11"
rand = "0.8"
rand_distr = "0.4"

# WASM support
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"





